Added mock for test and wip in steps to login and signin
Signed-off-by: Noe CR <noecr.dev@gmail.com>

--- a/mock/pages/login.page.html
+++ b/mock/pages/login.page.html
@@ -16,7 +16,7 @@
         <h1 class="m-b-0 m-t-10">Header</h1>
       </div>
       <div class="loginbox m-t-30">
-        <form id="tp_signin" method="post" action="" class="form-signin">
+        <form id="tp_signin" method="" action="/home" class="form-signin">
           <h4 class="m-t-0 m-b-20 text-primary bold text-center">Acceder</h4>
           <div class="form-group form-group-default">
             <label for="tpemail">Tu email de empresa</label>
