Added validation logic for determine if it is necesary signin or signout
Signed-off-by: Noe CR <noecr.dev@gmail.com>

--- a/mock/pages/calendar.page.html
+++ b/mock/pages/calendar.page.html
@@ -70,7 +70,7 @@
                       <!-- USER DETAILS ############################################# -->
                       <div class="c-cell c-cell--row-header" data-name="USERNAME"
                         data-team="5d8d06046a9728312b1636f0,5f5b3e25e67d8f69d3182662"
-                        data-workplace="5d8d02f96a972817df3a48d6" data-workingdays="mon,tue,wed,thu,fri"
+                        data-workplace="5d8d02f96a972817df3a48d6" data-workingdays="mon,tue,wed,thu,fri,sat,sun"
                         data-employee="5f1a8cf6d67be468f27a1de3">
                         <span>MY NAME COMPLETE</span>
                       </div>
