--- a/mock/pages/home.page.html
+++ b/mock/pages/home.page.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mock Home Page</title>
+  <style>
+    .ocult {
+      display: none;
+    }
+  </style>
 </head>
 
 <body>
@@ -18,11 +23,11 @@
         <div class="text-center text-dark clockout_item ocult">
           <i class="fal fa-stopwatch fa-fw"></i> <span class="clocktimer" data-tmp="0"></span>
         </div>
-        <button class="btn btn-default btn-block btn-lg bold m-t-5 clockout_item btnclockout ocult">
+        <button class="btn btn-default btn-block btn-lg bold m-t-5 clockout_item btnclockout">
           <i class="fas fa-circle text-success fa-fw fa-xs"></i>
           <span class="ml-1">Salir</span>
         </button>
-        <button class="btn btn-primary btn-block btn-lg bold m-t-5 clockin_item btnclockin ">
+        <button class="btn btn-primary btn-block btn-lg bold m-t-5 clockin_item btnclockin">
           <i class="fas fa-circle text-white fa-fw fa-xs"></i>
           <span class="ml-1">Entrar</span>
         </button>
@@ -30,5 +35,20 @@
     </div>
   </div>
 </body>
+
+<script>
+  window.onload = function () {
+    console.log('Load window');
+    const randomElement = Math.floor(Math.random() * 2) ? '.btnclockout' : '.btnclockin';
+    console.log(randomElement);
+    const element = document.querySelector(`button${randomElement}`);
+    console.log(`button${randomElement}`);
+    console.log(element.classList);
+    element.classList.add('ocult');
+
+
+    console.log(document.querySelector(`button.ocult`).classList);
+  };
+</script>
 
 </html>
